<resources>
    <string name="app_name">Notes</string>
    <string name="notes">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub title</string>
    <string name="type_note_hear">Type note hear ...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="select_image">Select Image</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_wont_to_delete_this_note">Are you sure you wont to delete this note</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
