<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_delete_note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/image_delete_note"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_delete"
        android:tint="@color/colorWhite"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_delete_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:fontFamily="@font/markazi_text_medium"
        android:textSize="@dimen/_19sdp"
        android:textColor="@color/colorWhite"
        android:text="@string/delete_note"
        app:layout_constraintBottom_toBottomOf="@id/image_delete_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_delete_note"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/text_warning_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:fontFamily="@font/markazi_text_regular"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp"
        android:text="@string/are_you_sure_you_wont_to_delete_this_note"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/image_delete_note"/>
    
    <TextView
        android:id="@+id/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:fontFamily="@font/markazi_text_medium"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorNoteDelete"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_warning_delete_note"/>

    <TextView
        android:id="@+id/cancel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorTextHint"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_text"
        app:layout_constraintTop_toBottomOf="@id/text_warning_delete_note"/>

</androidx.constraintlayout.widget.ConstraintLayout>