<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/link_image"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_web_link"
        android:tint="@color/colorWhite"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_55sdp"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/add_url"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="15dp"
        app:layout_constraintBottom_toBottomOf="@id/link_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/link_image"
        app:layout_constraintTop_toTopOf="@id/link_image"/>

    <EditText
        android:id="@+id/url_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:fontFamily="@font/markazi_text_regular"
        android:textSize="@dimen/_14sdp"
        android:background="@null"
        android:textColor="@color/colorWhite"
        android:hint="@string/enter_url"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColorHint="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/link_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/add_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/add"
        android:textSize="@dimen/_17sdp"
        android:textColor="@color/colorAccent"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_edit"/>

    <TextView
        android:id="@+id/console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/markazi_text_medium"
        android:text="Console"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_17sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_url"
        app:layout_constraintTop_toBottomOf="@id/url_edit"/>

</androidx.constraintlayout.widget.ConstraintLayout>