<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/miscellaneous_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/markazi_text_medium"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorWhite"
        android:text="@string/miscellaneous"
        android:includeFontPadding="false"/>

    <LinearLayout
        android:id="@+id/miscellaneous_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

           <View
               android:id="@+id/view_color1"
               android:layout_width="@dimen/_35sdp"
               android:layout_height="@dimen/_35sdp"
               android:background="@drawable/backround_note_color1" />

            <ImageView
                android:id="@+id/image_color1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorWhite"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backround_note_color2" />

            <ImageView
                android:id="@+id/image_color2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backround_note_color3" />

            <ImageView
                android:id="@+id/image_color3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backround_note_color4" />

            <ImageView
                android:id="@+id/image_color4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"/>
        </FrameLayout>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/backround_note_color5" />

            <ImageView
                android:id="@+id/image_color5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:tint="@color/colorWhite"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        tools:ignore = "UseCompoundDrawable">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"
            android:layout_marginTop="@dimen/_10sdp"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:fontFamily="@font/markazi_text_medium"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_url_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:contentDescription="@string/app_name">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_web_link"
            android:tint="@color/colorIcons"
            android:contentDescription="@string/app_name"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/markazi_text_medium"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp"
            android:text="@string/add_url"
            android:importantForAutofill="no"
            android:layout_marginStart="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_note_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorNoteDelete"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/markazi_text_medium"
            android:textColor="@color/colorNoteDelete"
            android:textSize="@dimen/_14sdp"
            android:text="@string/delete_note"
            android:importantForAutofill="no"
            android:includeFontPadding="false"/>
    </LinearLayout>
</LinearLayout>