<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activitys.MainActivity">

    <TextView
        android:id="@+id/text_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/notes"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/markazi_text_bold"
        android:textSize="@dimen/_25sdp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_search"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_note">
        
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            android:tint="@color/colorIcons"/>
        
        <EditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@null"
            android:fontFamily="@font/markazi_text_regular"
            android:hint="@string/search_notes"
            android:textSize="@dimen/_14sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_action"
        app:layout_constraintTop_toBottomOf="@id/search_layout"/>
    
    <LinearLayout
        android:id="@+id/layout_quick_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@color/colorQuickActionsBackground"
        app:layout_constraintBottom_toBottomOf="parent">

     <ImageView
         android:id="@+id/add_notes"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_add_outline"
         android:tint="@color/colorIcons"/>

        <ImageView
            android:id="@+id/add_images"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            android:tint="@color/colorIcons"/>
        <ImageView
            android:id="@+id/add_web_link"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            android:tint="@color/colorIcons"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_note_main"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add"
        android:padding="@dimen/_5sdp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/layout_quick_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_quick_action"/>
</androidx.constraintlayout.widget.ConstraintLayout>